--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "strapi"
   ],
   "scripts": {
-    "watch": "tsc-watch --outDir .",
-    "build": "tsc --outDir .",
+    "watch": "tsc-watch --outDir ./dist",
+    "build": "tsc --outDir ./dist",
     "prepare": "cross-env NODE_ENV=production npm run build"
   },
   "repository": {
@@ -29,6 +29,7 @@
   "license": "MIT",
   "packageManager": "yarn@3.6.1",
   "devDependencies": {
+    "@babel/core": "^7.23.0",
     "@babel/eslint-parser": "^7.22.15",
     "@types/node": "^20.8.2",
     "@types/node-fetch": "^2.6.6",
@@ -39,15 +40,19 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-unicorn": "^48.0.1",
-    "prettier": "^3.0.3",
+    "gatsby": "^5.0.0",
+    "prettier": "^2.8.8",
     "tsc-watch": "^6.0.4",
-    "typescript": "^5.2.2"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@babel/runtime": "^7.23.1",
     "gatsby-core-utils": "^4.12.0",
     "gatsby-plugin-utils": "^4.12.0",
     "lodash": "^4.17.21",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^2.6.11"
+  },
+  "peerDependencies": {
+    "gatsby": "^5.0.0"
   }
 }
