--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,16 @@
 {
-  "include": ["src/**/*.ts", "types"],
-  "exclude": ["node_modules"],
-  "compilerOptions": {
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "module": "commonjs",
-    "removeComments": false,
-    "preserveConstEnums": true,
-    "skipLibCheck": true,
+	"include": ["src/**/*.ts", "types"],
+	"exclude": ["node_modules"],
+	"compilerOptions": {
+		"lib": ["ESNext", "DOM"],
+    "target": "ESNext",
+    "jsx": "react",
+    "module": "commonJS",
+    "moduleResolution": "node",
+		"allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "sourceMap": true,
-    "target": "es2017",
-    "declaration": true,
-    "lib": ["es2017", "dom", "esnext.asynciterable"]
-  }
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
+	}
 }
